<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UI.feedback.FeedbackActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="Cυʂƚσɱҽɾ Rҽʋιҽɯ"
        android:textColor="@color/black"
        android:textSize="25dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_centerInParent="true"
            android:progressTint= "@android:color/holo_orange_dark"
            android:progressBackgroundTint="@color/white"
            android:stepSize="0.1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etfeedtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:drawableRight="@drawable/title"
                android:padding="20dp"
                android:layout_margin="20dp"
                android:hint=" Feedback Title"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etfeeddescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:drawableRight="@drawable/comments"
                android:layout_margin="20dp"
                android:hint="Feedback Description"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnFeedbackSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:hint="Submit"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white"
            android:background="@color/black"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20sp">
        </Button>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
